# point-cloud-mnist-2D

./: environment.yml  main.py  pyproject.toml  requirements.txt
